--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h2 class="section-heading">CONTACT</h2>
                 <p class="section-sub-heading">Fan? Drop a note!</p>
                 <div class="row contact-content">
-                    <div class="col col-half contact-info contact-item">
+                    <div class="col col-half contact-info contact-item s-col-full">
                         <p><i class="ti-location-pin icon"></i>Chicago, US</p>
                         <p><i class="ti-mobile icon"></i>Phone: <a href="tel:+00 151515">+00 151515</a></p>
                         <p><i class="ti-email icon"></i>Email: <a href="mailto:mail@mail.com">mail@mail.com</a></p>
